--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
 	},
 	"dependencies": {
 		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
+		"react-dom": "^17.0.2",
+		"react-router": "^6.16.0",
+		"react-router-dom": "^6.16.0"
 	},
 	"devDependencies": {
 		"@vitejs/plugin-react": "^1.0.7",
